--- a/Teko-Dev-Test/Teko-Dev-Test/Classes/ViewControllers/Base.lproj/Main.storyboard
+++ b/Teko-Dev-Test/Teko-Dev-Test/Classes/ViewControllers/Base.lproj/Main.storyboard
@@ -234,7 +234,7 @@
                                     <constraint firstItem="OjI-r7-dcu" firstAttribute="leading" secondItem="hqQ-DF-TNV" secondAttribute="leading" constant="12" id="zFX-dp-tOj"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TE2-x9-UnR">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TE2-x9-UnR">
                                 <rect key="frame" x="0.0" y="68" width="375" height="599"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
