--- a/Teko-Dev-Test/Teko-Dev-Test/Classes/ViewControllers/Detail/Views/CategoryCell/CategoriesCell.xib
+++ b/Teko-Dev-Test/Teko-Dev-Test/Classes/ViewControllers/Detail/Views/CategoryCell/CategoriesCell.xib
@@ -10,21 +10,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CategoriesCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="43" id="0GJ-as-iZt" customClass="CategoriesCell" customModule="Teko_Dev_Test" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="CategoriesCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="243" id="0GJ-as-iZt" customClass="CategoriesCell" customModule="Teko_Dev_Test" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="243"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0GJ-as-iZt" id="JFC-ie-YFR">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="42.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0GJ-as-iZt" id="JFC-ie-YFR">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="242.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ssO-lS-hiF">
-                        <rect key="frame" x="12" y="0.0" width="390" height="42.5"/>
+                        <rect key="frame" x="12" y="0.0" width="390" height="42"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ajy-Y6-n9K">
-                                <rect key="frame" x="0.0" y="0.0" width="130" height="42.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="130" height="42"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ac-AN-MYh">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="Mô tả sản phẩm">
                                             <color key="titleColor" red="0.5607843137254902" green="0.58431372549019611" blue="0.59607843137254901" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
@@ -34,7 +34,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QjC-gg-nkN">
-                                        <rect key="frame" x="0.0" y="40.5" width="130" height="2"/>
+                                        <rect key="frame" x="0.0" y="40" width="130" height="2"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="JiT-VZ-Gfr"/>
@@ -53,10 +53,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rNT-LU-YHV">
-                                <rect key="frame" x="130" y="0.0" width="130" height="42.5"/>
+                                <rect key="frame" x="130" y="0.0" width="130" height="42"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VL1-NI-oYc">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="Thông số kỹ thuật">
                                             <color key="titleColor" red="0.56078431370000004" green="0.58431372550000005" blue="0.59607843140000005" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
@@ -66,7 +66,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WfK-YM-Zsj">
-                                        <rect key="frame" x="0.0" y="40.5" width="130" height="2"/>
+                                        <rect key="frame" x="0.0" y="40" width="130" height="2"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="Uio-vG-DFc"/>
@@ -85,10 +85,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8NP-xJ-Gc1">
-                                <rect key="frame" x="260" y="0.0" width="130" height="42.5"/>
+                                <rect key="frame" x="260" y="0.0" width="130" height="42"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rxF-bn-3gZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="So sánh giá">
                                             <color key="titleColor" red="0.56078431370000004" green="0.58431372550000005" blue="0.59607843140000005" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
@@ -98,7 +98,7 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4dC-vt-Y9S">
-                                        <rect key="frame" x="0.0" y="40.5" width="130" height="2"/>
+                                        <rect key="frame" x="0.0" y="40" width="130" height="2"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="EcU-TP-16J"/>
@@ -118,15 +118,29 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="42" id="seY-xJ-SM9"/>
+                        </constraints>
                     </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ct-0w-dvu" customClass="FSPagerView" customModule="FSPagerView">
+                        <rect key="frame" x="0.0" y="42" width="414" height="200"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="rGz-dN-9b9"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="ssO-lS-hiF" secondAttribute="bottom" id="Q7S-4o-iDF"/>
+                    <constraint firstAttribute="bottom" secondItem="7Ct-0w-dvu" secondAttribute="bottom" id="GRH-Vg-QK3"/>
                     <constraint firstItem="ssO-lS-hiF" firstAttribute="leading" secondItem="JFC-ie-YFR" secondAttribute="leading" constant="12" id="g4V-zq-jg1"/>
+                    <constraint firstItem="7Ct-0w-dvu" firstAttribute="top" secondItem="ssO-lS-hiF" secondAttribute="bottom" id="n3S-UW-Rle"/>
+                    <constraint firstItem="7Ct-0w-dvu" firstAttribute="leading" secondItem="JFC-ie-YFR" secondAttribute="leading" id="rvn-hm-x3O"/>
+                    <constraint firstAttribute="trailing" secondItem="7Ct-0w-dvu" secondAttribute="trailing" id="rxM-l1-BsT"/>
                     <constraint firstAttribute="trailing" secondItem="ssO-lS-hiF" secondAttribute="trailing" constant="12" id="t5N-da-bIu"/>
                     <constraint firstItem="ssO-lS-hiF" firstAttribute="top" secondItem="JFC-ie-YFR" secondAttribute="top" id="wlD-64-6fe"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="attributeButton" destination="VL1-NI-oYc" id="SVJ-YU-RWY"/>
                 <outlet property="attributeDecorView" destination="WfK-YM-Zsj" id="aru-qO-lCG"/>
@@ -134,8 +148,10 @@
                 <outlet property="comparePriceButton" destination="rxF-bn-3gZ" id="xu0-bF-Kax"/>
                 <outlet property="descDecorView" destination="QjC-gg-nkN" id="jic-v8-S9S"/>
                 <outlet property="descItemButton" destination="0ac-AN-MYh" id="uNj-1l-cjf"/>
+                <outlet property="pageViewHeight" destination="rGz-dN-9b9" id="lYv-Q3-aye"/>
+                <outlet property="pagerView" destination="7Ct-0w-dvu" id="LCw-VT-wuv"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="142.29910714285714"/>
+            <point key="canvasLocation" x="131.8840579710145" y="209.26339285714286"/>
         </tableViewCell>
     </objects>
 </document>
